Commit 4.50, some more coorections.

--- a/MPL_TypesOfPlots.ipynb
+++ b/MPL_TypesOfPlots.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "id": "3bb1e19d",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Types of Plots in MatPlotLib\n",
+    "\n",
+    "### Pairwise Data\n",
+    "### Statistical Distributions\n",
+    "### Gridded Data\n",
+    "### Ireegularly Gridded Data\n",
+    "### 3D & Volumetric Data"
+   ]
   },
   {
    "cell_type": "markdown",
